@@ -7,20 +7,34 @@ version = '1.0.0'
 
 java {
     toolchain {
-        targetCompatibility = JavaVersion.VERSION_17
-        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.valueOf("VERSION_" + property("JAVA_VERSION"))
+        sourceCompatibility = JavaVersion.valueOf("VERSION_" + property("JAVA_VERSION"))
     }
 }
 
+/*compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'spongeapi'
+        ]
+    }
+}*/
+
 repositories {
     mavenCentral()
+    maven {
+        url "https://repo.papermc.io/repository/maven-public/"
+
+    }
 }
 
 dependencies {
-    implementation project(":bukkit-api")
     implementation project(":CollectionStream")
     implementation project(":MoseStream")
-    implementation 'org.spongepowered:spongeapi:10.0.0'
+    implementation 'org.spongepowered:spongeapi:' + property("SPONGE_VERSION")
+    implementation 'org.jetbrains:annotations:26.0.1'
+    implementation ('io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT')
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
